--- a/GymSystem.API/appsettings.json
+++ b/GymSystem.API/appsettings.json
@@ -1,10 +1,13 @@
+
+
+//===================
 {
-  "BaseUrl": "https://localhost:7266",
-  // "BaseUrl": "https://yourdomain.com",
+  //"BaseUrl": "https://localhost:7266",
+   "BaseUrl": " http://gymgraduation.runasp.net",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=.;Database=GymSystemAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
-    "IdentityConnection": "Server=.;Database=GymSystemIdentityAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
-    //"IdentityConnection": "Server=db14597.public.databaseasp.net; Database=db14597; User Id=db14597; Password=hY@76sX!-4yK; Encrypt=False; MultipleActiveResultSets=True",
+    //"IdentityConnection": "Server=.;Database=GymSystemIdentityAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "IdentityConnection": "Server=db14770.public.databaseasp.net; Database=db14770; User Id=db14770; Password=7z=J+8XeAp4@; Encrypt=False; MultipleActiveResultSets=True;",
     "Redis": "localhost"
   },
   "MailSettings": {
